maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: recursive variable sommeAngle needs type
  do { var sommeAngle= keepHandOnSideWall(sommeAngle)
                                          ^Escaper:9: error: not enough arguments for method keepHandOnSideWall: (sa: Int)Int.
Unspecified value parameter sa.
    keepHandOnSideWall()
                      ^